--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,97 @@
+@media (min-width: 768px) { 
+  .container {
+      width: 75%;
+  }
+
+  .sidebar {
+      width: 25%;
+      float: left;
+  }
+
+  .content {
+      width: 75%;
+      float: right;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 body {
     margin: 0;
-    overflow: hidden;
-    background: url('Coffmug-removebg-preview.png') repeat; 
-    background-size: 80px; /* Adjust the size of the repeated images */
+    font-family: 'Arial', sans-serif;
+    background: #f4f4f4;
 }
+
+.header, .footer {
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.main {
+    padding: 1rem;
+    text-align: justify;
+}
+
+/* Tablet and above */
+@media (min-width: 768px) {
+    .header, .footer {
+        padding: 1.5rem 0;
+    }
+
+    .main {
+        max-width: 750px;
+        margin: 0 auto;
+        padding: 2rem;
+    }
+
+    .navigation {
+        display: flex;
+        justify-content: space-around;
+        list-style: none;
+        padding: 0;
+    }
+}
+
+/* Desktop and above */
+@media (min-width: 992px) {
+    .header, .footer {
+        padding: 2rem 0;
+    }
+
+    .main {
+        max-width: 970px;
+    }
+}
+
+
+
+
+
+
+
+
+body 
+{
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+
+    overflow: auto;
+    background: url('artistic-blurry-colorful-wallpaper-background (1).jpg');
+    background-size: 200%;
+    
+}
+
 
 
 .container {
@@ -58,14 +146,14 @@ body {
 /* Gradient background */
 body::before 
 {
-    content: "";
+    /*content: "";
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom right, rgba(1, 1, 16, 0.922), rgba(68, 50, 172, 0.944));
-    z-index: -1;
+    z-index: -1;*/
 }
 
 h1.main-heading
@@ -87,87 +175,168 @@ h2.sub-heading
     animation-delay: 4s;
 }
 
-div.login
-{
-  position: absolute;
-  top: 50%;
-  left: 70%;
-  text-align: center;
-}
 
-div.dropbox-age
+
+div.Dropboxes
 {
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  position: absolute;
-  top: 56%;
-  left: 5%;
-  text-align: center;
-  font-size: 2em;
-
-  background-color: #400088;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer
+  min-height: 125vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: -350px;
 }
 
+/*######################################### Dropdown stuff ################################################*/
 
-div.dropbox-sleep
+.dropdown
 {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  position: absolute;
-  top: 56%;
-  left: 35%;
-  text-align: center;
-  font-size: 2em;
+  height: min-content;
+  min-width: 15em;
+  position: relative;
+  margin: 2em;
 }
 
-.dropbtn-1
+.dropdown *
 {
-  background-color: #24003f;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+box-sizing: border-box;
 }
 
-.dropdown-content {
+.select
+{
+background: #1c0644;
+color: #fff;
+display: flex;
+justify-content: space-between;
+align-items: center;
+border: 2px #1a0442 solid;
+border-radius: 0.5em;
+padding: 1em;
+cursor: pointer;
+transition: background 0.3s;
+}
+
+.select-clicked
+{
+border: 2px #26489a solid; /*might wanna change colour*/
+box-shadow: 0 0 0.8em #26489a; /*same*/
+}
+
+.select:hover
+{
+background: #2f0858; /*same*/
+}
+
+.caret
+{
+width: 0;
+height: 0;
+border-right: 5px solid transparent;
+border-left: 5px solid transparent;
+border-top: 6px solid #fff;
+transition: 0.3s;
+}
+
+.caret-rotate
+{
+  transform: rotate(180deg);
+}
+
+.menu
+{
+  list-style: none;
+  padding: 0.2em 0.5em;
+  background: #6525a9; /*The colour of the actual options of the menu box*/
+  border: 1px #1a0442 solid;
+  box-shadow: 0 0.5em 1em rgba(21, 2, 52, 0.042);
+  border-radius: 0.5;
+  color:#100225;
+  position: absolute;
+  top: 3em;
+  left: 50%;
+  width: 100%;
+  transform: translateX(-50);
+  opacity: 0;
   display: none;
-  position: absolute;
-  background-color: #454683;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  transition: 0.2s;
   z-index: 1;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+.menu li
+{
+padding: 0.7em 0.5em;
+margin: 0.3em 0;
+border-radius: 0.5em;
+cursor: pointer;
+}
+
+.menu li:hover
+{
+  background: #200053;
+  color:rgb(109, 206, 255) /*Colour of the words in the menu when cursor hovers over it*/
 }
 
 
+.active
+{
+  background: 23242a;
+}
 
+.menu-open
+{
+  display: block;
+  opacity: 1;
+}
 
+/*######################################### Submit Button ################################################*/
 
 .sub-btn
 {
-  background-color: #3a85d9;
-  color: rgb(28, 15, 66);
-  padding: 16px;
-  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: #071a30;
+  color: rgb(62, 101, 150);
+  width: auto;
+
+  padding: 10px;
+  font-size: 17px;
+
   border: none;
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #020124;
+  box-sizing: border-box;
+
+  margin: 0 auto; /* Used to be margin-right: 190px; */
+  display: block; /* Added this to make it a block element */
+
+  text-decoration: solid;
+  transition: background-color 0.2s, color 0.2s;
+  transition: padding 0.1s;
+  font-weight: bold;
   cursor: pointer;
-
   position: relative;
-  display: inline-block;
 
-  top: 90%;
-  left: 50%;
+  /*  align-items: center;
+  top: 10%;
+  left: 50%; [removed these 3 lines] */
 }
+
+.sub-btn:hover
+{
+  background-color: #0a2b52;
+  color: #7a9be8;
+  transition: 0.6s;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+
+
+/*############################heading stuff#############################*/
 
 @keyframes blink {
     0%,
